# canopy

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
docs/: agents.md  architecture.md  commands.md  concepts.md  mcp.md  workspace.md
docs/architecture/: providers.md
docs/archive/: test-plan.md
src/canopy/: __init__.py  hooks_entry.py
src/canopy/actions/: active.py  advisories.py  aliases.py  bootstrap.py  conflicts.py  doctor.py  draft_replies.py  drift.py  feature_state.py  hook_context.py  hook_gate.py  join.py  (+16 more)
tests/: conftest.py  test_active.py  test_advisories.py  test_bootstrap.py  test_ci_status.py  test_config.py  test_conflicts.py  test_coordinator.py  test_discovery_worktrees.py  test_doctor.py  test_draft_replies.py  test_hook_context.py  test_hook_gate.py  test_hook_gate_corpus.py  test_hooks_entry.py  test_install_hooks.py  test_join.py  test_migrate_slots.py  test_new_commands.py  test_prs_cache.py  test_reclaim.py  test_registry.py  test_render.py  test_runner.py  test_ship.py  test_slot_bootstrap.py  test_slot_details.py  test_slot_lifecycle_scenarios.py  test_slot_load.py  test_slot_policy.py  test_slots.py  test_slots_concurrency.py  test_start.py  test_switch.py  test_switch_action.py  test_switch_preflight.py  test_triage.py
tests/fixtures/: hook_gate_corpus.jsonl
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: canopyCli.ts  extension.ts  stateReader.test.ts  stateReader.ts
(+24 files in other folders)
