[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canopy-cli"
dynamic = ["version"]
description = "Workspace-first development orchestrator for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "tomli>=2.0; python_version < '3.11'",
    "mcp>=1.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/ashmitb95/canopy"
Source = "https://github.com/ashmitb95/canopy"
Issues = "https://github.com/ashmitb95/canopy/issues"

[project.optional-dependencies]
graph = [
    "networkx>=3.0",
    "tree-sitter>=0.21",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
canopy = "canopy.cli.main:main"
canopy-mcp = "canopy.mcp.server:main"

[tool.hatch.version]
path = "src/canopy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/canopy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
